[package]
name = "openhedge-arbitrage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixed = { version = "1.26.0", features = ["num-traits", "serde", "serde-str"] }
itertools = "0.12.1"
num-traits = "0.2.18"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
typenum = "1.17.0"
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots",
] }
tungstenite = "0.21.0"
futures = "0.3.30"
io-extra = "0.1.0"
tokio = { version = "1.36.0", features = ["macros", "rt"] }
